--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ DB_PASSWORD=123456
 DB_NAME=todo_list
 DB_HOST=127.0.0.1
 DB_DIALECT=mysql
+DB_USERNAME_PROD=root
+DB_PASSWORD_PROD=Y6rzC0QzN5QdkClBvdHECq873Yc8kp1O
+DB_NAME_PROD=todo_list_1c8q
+DB_HOST_PROD=dpg-d123grbuibrs73epuhog-a
+DB_DIALECT_PROD=postgres
