--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node main.js",
+    "migrate": "sequelize-cli db:migrate",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
