--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "migrate": "sequelize-cli db:migrate",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "knex": "^3.1.0",
     "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "sequelize": "^6.37.7"
   }
